--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,106 @@ body {
 .produto_preco {
   color: rgba(0, 0, 0, 0.5);
 }
+
+/* MODAL */
+
+.modal::before {
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 80px;
+}
+
+.modal_container {
+  position: relative;
+  z-index: 1;
+  background: linear-gradient(to right, transparent 250px, white 250px);
+  display: grid;
+  align-items: end;
+  grid-gap: 50px;
+  padding: 50px 50px 50px 0;
+}
+
+.modal_img {
+  margin-top: 50px;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.modal_img img {
+  max-width: 300px;
+  display: block;
+}
+
+.modal_dados {
+  max-width: 600px;
+  grid-column: 2;
+}
+.modal_avaliacoes {
+  grid-column: 2;
+}
+
+.modal_nome {
+  font-size: 3rem;
+}
+
+.modal_btn {
+  margin-top: 50px;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  font-size: 1rem;
+  padding: 10px 25px;
+  font-family: "Noto Serif";
+}
+
+.modal_btn:active {
+  background: #808080;
+}
+
+/*AVALIAÇÃO */
+
+.modal_avaliacoes {
+  grid-column: 2;
+}
+.avaliacao {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+}
+.avaliacao_descricao {
+  color: rgba(0, 0, 0, 7);
+  margin: 20px 0 5px 0;
+}
+.avaliacao_usuario {
+  font-weight: bold;
+}
+
+.avaliacao_subtitulo {
+  font-size: 1.75rem;
+}
+
+.modal_fechar {
+  border-radius: 50%;
+  border: 2px solid #000;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
