--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,31 @@ body {
 #app {
   padding: 0 80px;
 }
+/* Header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 900px;
+  margin: 0 auto;
+  padding: 25px 0;
+}
+.header img {
+  width: 60px;
+  /* height: 60px; */
+}
+.carrinho_img::after {
+  content: "";
+  background: url("/assets/carrinho.svg") no-repeat center center;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+.carrinho_img {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+/* Produto*/
 
 .produtos {
   max-width: 900px;
@@ -77,6 +102,18 @@ body {
   align-items: end;
   grid-gap: 50px;
   padding: 50px 50px 50px 0;
+  animation: fadeIn 0.3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(50px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0px, 0, 0);
+  }
 }
 
 .modal_img {
@@ -110,6 +147,10 @@ body {
   font-size: 1rem;
   padding: 10px 25px;
   font-family: "Noto Serif";
+}
+
+.desabilitado {
+  background: gray;
 }
 
 .modal_btn:active {
@@ -146,5 +187,41 @@ body {
   top: -10px;
   right: -10px;
   font-size: 1rem;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Alerta de produto */
+.alerta {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  z-index: 10;
+  text-align: center;
+  width: 100%;
+  animation: fadeInDown 0.3s forwards;
+  display: none;
+}
+
+.alerta.ativo {
+  display: block;
+}
+
+@keyframes fadeInDown {
+  from {
+    transform: translate3d(0, -30px, 0);
+    opacity: 0;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+.alertaMensagem {
+  display: inline-block;
+  background: #fff;
+  text-align: center;
+  padding: 20px 40px;
+  border: 2px solid black;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
