--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,3 +225,88 @@ body {
   border: 2px solid black;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
+
+/*Alerta*/
+
+.carrinho_modal::before {
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.carrinho_modal {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0px;
+  right: 0px;
+  display: none;
+  padding: 20px;
+}
+.carrinho_modal.ativo {
+  display: block;
+}
+
+.carrinho_container {
+  position: relative;
+  margin: 80px auto;
+  background: #fff;
+  padding: 40px;
+  max-width: 800px;
+  animation: fadeInDown 0.3s forwards;
+}
+.carrinho_item {
+  display: grid;
+  grid-template-columns: 1fr 1fr 50px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 10px 0;
+}
+.carrinho_titulo {
+  margin-bottom: 10px;
+  border-bottom: 2px solid #000;
+}
+.carrinho_remover {
+  border: none;
+  font-size: 1rem;
+  background: #fff;
+  cursor: pointer;
+}
+.carrinho_fechar {
+  border-radius: 50%;
+  border: 2px solid #000;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 1rem;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+.carrinho_preco {
+  text-align: right;
+}
+.carrinho_total {
+  text-align: right;
+  padding: 10px 50px 10px 0;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #000;
+}
+.carrinho_finalizar {
+  display: block;
+  margin-left: auto;
+  background: #fff;
+  color: #000;
+  font-size: 1rem;
+  font-family: "Noto Serif";
+  padding: 10px 25px;
+}
+.carrinho_finalizar:hover {
+  background: #000;
+  color: #fff;
+  transition: 0.5s;
+}
